--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -10,7 +10,7 @@
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
         }
 
@@ -28,6 +28,10 @@
     <main>
         <h1>Teste de imagem de fundo</h1>
         <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae eveniet aut earum, quisquam autem tempore minima, incidunt illum commodi nihil iusto quaerat consectetur obcaecati, cum voluptatibus possimus debitis corporis sunt?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit temporibus ex dicta corrupti dolore corporis commodi deserunt in molestias impedit dolores mollitia, exercitationem quis. Exercitationem 
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae eveniet aut earum, quisquam autem tempore minima, incidunt illum commodi nihil iusto quaerat consectetur obcaecati, cum voluptatibus possimus debitis corporis sunt?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit temporibus ex dicta corrupti dolore corporis commodi deserunt in molestias impedit dolores mollitia, exercitationem quis. Exercitationem 
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae eveniet aut earum, quisquam autem tempore minima, incidunt illum commodi nihil iusto quaerat consectetur obcaecati, cum voluptatibus possimus debitis corporis sunt?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit temporibus ex dicta corrupti dolore corporis commodi deserunt in molestias impedit dolores mollitia, exercitationem quis. Exercitationem 
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae eveniet aut earum, quisquam autem tempore minima, incidunt illum commodi nihil iusto quaerat consectetur obcaecati, cum voluptatibus possimus debitis corporis sunt?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit temporibus ex dicta corrupti dolore corporis commodi deserunt in molestias impedit dolores mollitia, exercitationem quis. Exercitationem 
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae eveniet aut earum, quisquam autem tempore minima, incidunt illum commodi nihil iusto quaerat consectetur obcaecati, cum voluptatibus possimus debitis corporis sunt?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit temporibus ex dicta corrupti dolore corporis commodi deserunt in molestias impedit dolores mollitia, exercitationem quis. Exercitationem 
         </p>
     </main>
