--- a/exercicios/ex023/tabela004.html
+++ b/exercicios/ex023/tabela004.html
@@ -28,9 +28,50 @@
 <body>
    <h1>Exercício de Tabela</h1> 
    <table>
-    <th>Grupos</th>
-    <th>Nomes</th>
-    <th colspan="3">Filmes</th>
+    <caption>Filmes Favoritos</caption>
+    <tr>
+        <th>Grupos</th>
+        <th>Nomes</th>
+        <th colspan="3">Filmes</th>
+    </tr>
+    <tr>
+        <th rowspan="3">Mulheres</th>
+        <td>Ana Maria Santos</td>
+        <td>Alien</td>
+        <td>Rambo</td>
+        <td>Vingadores</td>
+    </tr>
+    <tr>
+        <td>Beatriz Souza</td>
+        <td>Hulk</td>
+        <td>Inception</td>
+        <td>Batman</td>
+    </tr>
+    <tr>
+        <td>Cláudia Melo</td>
+        <td>Oblivion</td>
+        <td>Matrix</td>
+        <td>Big Hero</td>
+    </tr>
+    <tr>
+        <th rowspan="3">Homens</th>
+        <td>Bruno Mendonça</td>
+        <td>Intocáveis</td>
+        <td>Amnésia</td>
+        <td>Gladiador</td>
+    </tr>
+    <tr>
+        <td>Daniel Lourenço</td>
+        <td>Wall-E</td>
+        <td>Oldboy</td>
+        <td>Dangal</td>
+    </tr>
+    <tr>
+        <td>Fabiano Mota</td>
+        <td>Stars Wars V</td>
+        <td>Taxi Driver</td>
+        <td>Toy Story</td>
+    </tr>
    </table>
 </body>
 </html>
