--- a/exercicios/ex023/tabela004.html
+++ b/exercicios/ex023/tabela004.html
@@ -32,10 +32,10 @@
     <tr>
         <th>Grupos</th>
         <th>Nomes</th>
-        <th colspan="3">Filmes</th>
+        <th colspan="3" scope="colgroup">Filmes</th>
     </tr>
     <tr>
-        <th rowspan="3">Mulheres</th>
+        <th rowspan="3" scope="rowgroup">Mulheres</th>
         <td>Ana Maria Santos</td>
         <td>Alien</td>
         <td>Rambo</td>
@@ -54,7 +54,7 @@
         <td>Big Hero</td>
     </tr>
     <tr>
-        <th rowspan="3">Homens</th>
+        <th rowspan="3" scope="rowgroup">Homens</th>
         <td>Bruno Mendonça</td>
         <td>Intocáveis</td>
         <td>Amnésia</td>
@@ -71,6 +71,10 @@
         <td>Stars Wars V</td>
         <td>Taxi Driver</td>
         <td>Toy Story</td>
+    </tr>
+    <tr>
+        <th colspan="4" scope="row">Total de Filmes</th>
+        <td>18</td>
     </tr>
    </table>
 </body>
