Tabela com cabeçalho fixo na rolagem vertical

--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -9,6 +9,10 @@
             font-family: Arial, Helvetica, sans-serif;
         }
 
+        p {
+            width: 400px;
+        }
+
         table {
             width: 500px;
             border-collapse: collapse;
@@ -51,6 +55,9 @@
     </style>
 </head>
 <body>
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni voluptatem pariatur consequuntur sunt laudantium quisquam, veritatis, saepe quo cumque, quidem esse dolorum? Dolorum iusto aliquam facilis rerum libero. Iusto, incidunt.loren Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate vero eos, maiores distinctio dolor repudiandae laboriosam ex, quibusdam a eaque nobis quia illum debitis, quae sit tempora consequuntur? Maxime, porro? Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio numquam obcaecati unde cum, voluptatibus fuga itaque quasi iste, impedit nesciunt perferendis aut totam corrupti rem culpa! Pariatur optio maxime cumque? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia nisi suscipit quaerat eveniet quos necessitatibus odio esse quod enim! Magni aut quibusdam neque voluptas veniam laborum consequatur eum nesciunt molestias?Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem fuga porro explicabo, autem id libero? Doloremque cum, eum dicta, minima optio sapiente sit totam nesciunt architecto recusandae nihil id quia.
+    </p>
     <h1>Uso de tabelas grandes</h1>
     <table>
 
@@ -185,6 +192,11 @@
         </tfoot>
 
     </table>
-    
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni voluptatem pariatur consequuntur sunt laudantium quisquam, veritatis, saepe quo cumque, quidem esse dolorum? Dolorum iusto aliquam facilis rerum libero. Iusto, incidunt.loren Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate vero eos, maiores distinctio dolor repudiandae laboriosam ex, quibusdam a eaque nobis quia illum debitis, quae sit tempora consequuntur? Maxime, porro? Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio numquam obcaecati unde cum, voluptatibus fuga itaque quasi iste, impedit nesciunt perferendis aut totam corrupti rem culpa! Pariatur optio maxime cumque? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia nisi suscipit quaerat eveniet quos necessitatibus odio esse quod enim! Magni aut quibusdam neque voluptas veniam laborum consequatur eum nesciunt molestias?Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem fuga porro explicabo, autem id libero? Doloremque cum, eum dicta, minima optio sapiente sit totam nesciunt architecto recusandae nihil id quia.
+    </p>
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni voluptatem pariatur consequuntur sunt laudantium quisquam, veritatis, saepe quo cumque, quidem esse dolorum? Dolorum iusto aliquam facilis rerum libero. Iusto, incidunt.loren Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate vero eos, maiores distinctio dolor repudiandae laboriosam ex, quibusdam a eaque nobis quia illum debitis, quae sit tempora consequuntur? Maxime, porro? Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio numquam obcaecati unde cum, voluptatibus fuga itaque quasi iste, impedit nesciunt perferendis aut totam corrupti rem culpa! Pariatur optio maxime cumque? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia nisi suscipit quaerat eveniet quos necessitatibus odio esse quod enim! Magni aut quibusdam neque voluptas veniam laborum consequatur eum nesciunt molestias?Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem fuga porro explicabo, autem id libero? Doloremque cum, eum dicta, minima optio sapiente sit totam nesciunt architecto recusandae nihil id quia.
+    </p>
 </body>
 </html>
