Atualizei exercício iframe002.html

--- a/exercicios/ex024/frame002.html
+++ b/exercicios/ex024/frame002.html
@@ -16,13 +16,20 @@
             margin: auto;
             border: 2px solid black;
         }
+        p.erro {
+            color: red;
+            font-weight: bold;
+            font-size: 2em;
+        }
     </style>
 
 </head>
 <body>
     <h1>Testes com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat totam nulla animi hic placeat earum fugit, eveniet similique? Accusamus omnis fuga enim mollitia alias impedit maiores dolorem officiis eos Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia omnis voluptate natus, cum tenetur est deleniti optio ducimus praesentium minima ab quod itaque repudiandae fugiat excepturi architecto officia. Eius, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit velit itaque ratione atque delectus. Corporis doloribus eum error culpa tempore deleniti illum porro. Error nesciunt, earum unde porro beatae reiciendis!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero ipsa fugit expedita eveniet suscipit harum eos laboriosam, commodi rerum, praesentium fuga soluta sapiente ullam tempora? Impedit, aspernatur magni? Itaque, repudiandae.</p>
-<iframe src="pagina001.html" frameborder="0"></iframe>
+<iframe src="paginas-extras/pagina001.html" frameborder="0">
+    <p class="erro">Infelizmente seu navegador não é compatível com isto</p>
+</iframe>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat totam nulla animi hic placeat earum fugit, eveniet similique? Accusamus omnis fuga enim mollitia alias impedit maiores dolorem officiis eos Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia omnis voluptate natus, cum tenetur est deleniti optio ducimus praesentium minima ab quod itaque repudiandae fugiat excepturi architecto officia. Eius, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit velit itaque ratione atque delectus. Corporis doloribus eum error culpa tempore deleniti illum porro. Error nesciunt, earum unde porro beatae reiciendis!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero ipsa fugit expedita eveniet suscipit harum eos laboriosam, commodi rerum, praesentium fuga soluta sapiente ullam tempora? Impedit, aspernatur magni? Itaque, repudiandae.</p>
     
 </body>
