Usando iframe com informação dinâmica inicial

--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -31,7 +31,7 @@
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi, velit? Quisquam, tempora. Ratione dignissimos a recusandae amet, officiis, totam odit ut placeat autem numquam necessitatibus iusto, odio voluptatem veniam. Laudantium.
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum possimus reprehenderit dolor tempore quam impedit ipsa veniam iure distinctio quaerat, recusandae eveniet itaque, cumque provident corrupti ducimus libero voluptas nisi!
         </p>
-        <iframe id="tela" name="janela" src="">
+        <iframe id="tela" name="janela" srcdoc="<h1> Escolha uma das opções acima</h1>">
             <p>Infelismente o seu navegador não é compatível</p>
         </iframe>
         <p>
