--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -23,9 +23,9 @@
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, dignissimos consequuntur voluptatem illo facere earum similique, numquam atque amet sapiente officia in nobis voluptates suscipit dolore, ipsa temporibus assumenda eum.
     </p>
     <ul>
-        <li><a href="paginas-extras/pagina001.html" target="janela">Primeira página</a></li>
-        <li><a href="paginas-extras/pagina002.html" target="janela">Segunda página</a></li>
-        <li><a href="paginas-extras/pagina003.html" target="janela">Terceira página</a></li>
+        <li><a href="paginas-extras/pag001.html" target="janela">Primeira página</a></li>
+        <li><a href="paginas-extras/pag002.html" target="janela">Segunda página</a></li>
+        <li><a href="paginas-extras/pag003.html" target="janela">Terceira página</a></li>
     </ul>
     <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi, velit? Quisquam, tempora. Ratione dignissimos a recusandae amet, officiis, totam odit ut placeat autem numquam necessitatibus iusto, odio voluptatem veniam. Laudantium.
