iframe, estudos de segurança

--- a/exercicios/ex024/paginas-extras/pag005.html
+++ b/exercicios/ex024/paginas-extras/pag005.html
@@ -6,7 +6,7 @@
     <title>JavaScript</title>
 </head>
 <body>
-    <a href="#" onclick="clicou()">Clique em mim</a>
+    <a href="#" onclick="clicou()">Clique em mim</a> <br>
     <div id="saida"></div>
 
     <script>
