--- a/exercicios/ex024/paginas-extras/pag005.html
+++ b/exercicios/ex024/paginas-extras/pag005.html
@@ -12,9 +12,8 @@
     <script>
         function clicou() {
             s = window.document.getElementById("saida")
-            s.getElementById += '<p> Vc clicou!</p>'
+            s.innerHTML += '<p> Vc clicou!</p>'
         }
     </script>
-
 </body>
 </html>
