--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <!-- Biblioteca do Google para o menu tipo hamburguer -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <!-- CSS Genérico para Mobyle First -->
     <link rel="stylesheet" href="estilos/style.css">
+    <!-- Outras médias específicas - Tablet, PC (Notebook, descktop), TV e impressora -->
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu site</h1>
+        <!-- a tag "<span...> menu </span>" mostra o ícone do "mmenu"-->
         <span id="icone-burguer" onclick="clickMenu()" class="material-symbols-outlined">menu</span>
         <menu id="itens">
             <ul>
@@ -33,6 +38,17 @@
         </article>
     </main>
     <script>
+        function mudouTamanho()
+        {
+
+            if(window.innerWidth >= 768) {
+                itens.style.display = 'block'
+            }
+            else {
+                itens.style.display = 'none'
+            }
+        }
+        
         function clickMenu() 
         {
            if(itens.style.display == 'block') 
