Atualização para melhorar a interface de validação

--- a/exercicios/ex025/form004.html
+++ b/exercicios/ex025/form004.html
@@ -25,7 +25,7 @@
             </p>
             <p>
                 <label for="itel">Telefone:</label>
-                <input type="tel" name="tel" id="itel" autocomplete="tel" pattern="^\(\d{2}\)\d{4,5}-\d{4}$" placeholder="(xx)xxxx-xxxx">
+                <input type="tel" name="tel" id="itel" autocomplete="tel" pattern="^\(\d{2}\)\d{4,5}-\d{4}$" placeholder="(xx)xxxx-xxxx" minlength="13" maxlength="14" required> 
             </p>
         </fieldset>
         <p>
