--- a/exercicios/ex025/form006.html
+++ b/exercicios/ex025/form006.html
@@ -14,7 +14,8 @@
         </p>
         <p>
             <label for="inivel">Nível de satisfação:</label>
-            <input type="range" name="nivel" id="inivel" min="1" max="5" value="2">
+            <input type="range" name="nivel" id="inivel" min="1" max="5" value="2" oninput="ivalor.innerHTML = Number(inivel.value)">
+            <output name="valor" id="ivalor">2</output>
         </p>
         <p>
             <label for="ifoto">Escolha uma foto de perfil:</label>
